# learn-rust

./: .gitignore  Cargo.toml  build.sh
gtk/: Cargo.toml
notebook/: reqwest.ipynb  rust-bio.ipynb
plotters/: Cargo.toml
rust-bio/: Cargo.toml
rust-bio/src/: example.rs
rust-book/: Cargo.toml
rust-book/src/: 1.1.rs  10.2.rs  13.1.rs  3.1.rs  3.2.rs  3.3.rs  3.4.rs  3.5.rs  5.2.rs  6.1.rs  6.2.rs  6.3.rs  8.2.rs  9.2.rs  hello_world.rs  lib.rs
rust-book/src/adder/: Cargo.toml
rust-book/src/minigrep/: Cargo.toml
rust-book/src/minigrep/src/: lib.rs  main.rs
rust-book/tests/: common.rs
rust-std/: Cargo.toml
rust-std/src/: io.rs
src/gallery/: vec2vec.rs
src/gtk/: hello_world.rs  text_viewer.rs
src/plotters/: main.rs
src/rust-bio/: example.rs
src/rust-book/: 1.1.rs  10.1.rs  10.2.rs  10.3.rs  11.2.rs  13.1.rs  13.2.rs  3.1.rs  3.2.rs  3.3.rs  3.4.rs  3.5.rs  4.1.rs  4.2.rs  4.3.rs  5.1.rs  5.2.rs  5.3.rs  6.1.rs  6.2.rs  8.1.rs  8.2.rs  8.3.rs  front_of_house.rs  lib.rs
src/rust-book/adder/src/: lib.rs
src/rust-book/minigrep/src/: lib.rs  main.rs
src/rust-std/: io.rs
