[package]
name = "learn-rust"
version = "0.1.0"
authors = ["alienzj <alienchuj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "0.28.2"
rand = "0.7.0"
plotters = "^0.2.6"

[[bin]]
name = "rb-1-1"
path = "src/rust-book/1.1.rs"
# cargo run --bin rust-book-1-1

[[bin]]
name = "rb-1-2"
path = "src/rust-book/1.2.rs"

[[bin]]
name = "rb-1-3"
path = "src/rust-book/1.3.rs"

[[bin]]
name = "rb-2"
path = "src/rust-book/2.rs"

[[bin]]
name = "rb-3-1"
path = "src/rust-book/3.1.rs"

[[bin]]
name = "rb-3-2"
path = "src/rust-book/3.2.rs"

[[bin]]
name = "rb-3-3"
path = "src/rust-book/3.3.rs"

[[bin]]
name = "rb-3-4"
path = "src/rust-book/3.4.rs"

[[bin]]
name = "rb-3-5"
path = "src/rust-book/3.5.rs"

[[bin]]
name = "chart_plot"
path = "src/plotters/main.rs"
