[package]
name = "learn-rust"
version = "0.1.0"
authors = ["alienzj <alienchuj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "0.28.2"
rand = "0.7.0"
plotters = "^0.2.6"

[dependencies.gtk]
version = "0.8.0"
features = ["v3_16"]

[dependencies.gio]
version = "0.8.0"
features = ["v2_44"]

[[bin]]
name = "rb-1-1"
path = "src/rust-book/1.1.rs"
# cargo run --bin rust-book-1-1

[[bin]]
name = "rb-1-2"
path = "src/rust-book/1.2.rs"

[[bin]]
name = "rb-1-3"
path = "src/rust-book/1.3.rs"

[[bin]]
name = "rb-2"
path = "src/rust-book/2.rs"

[[bin]]
name = "rb-3-1"
path = "src/rust-book/3.1.rs"

[[bin]]
name = "rb-3-2"
path = "src/rust-book/3.2.rs"

[[bin]]
name = "rb-3-3"
path = "src/rust-book/3.3.rs"

[[bin]]
name = "rb-3-4"
path = "src/rust-book/3.4.rs"

[[bin]]
name = "rb-3-5"
path = "src/rust-book/3.5.rs"

[[bin]]
name = "rb-4-1"
path = "src/rust-book/4.1.rs"

[[bin]]
name = "rb-4-2"
path = "src/rust-book/4.2.rs"

[[bin]]
name = "rb-4-3"
path = "src/rust-book/4.3.rs"

[[bin]]
name = "rb-5-1"
path = "src/rust-book/5.1.rs"

[[bin]]
name = "rb-5-2"
path = "src/rust-book/5.2.rs"

[[bin]]
name = "rb-5-3"
path = "src/rust-book/5.3.rs"

[[bin]]
name = "rb-6-1"
path = "src/rust-book/6.1.rs"

[[bin]]
name = "rb-6-2"
path = "src/rust-book/6.2.rs"

[[bin]]
name = "rb-6-3"
path = "src/rust-book/6.3.rs"

[[bin]]
name = "chart_plot"
path = "src/plotters/main.rs"

[[bin]]
name = "gtk_basic_example"
path = "src/gtk/hello_world.rs"
