[package]
name = "learn-rust-bio"
version = "0.1.0"
authors = ["alienzj <alienchuj@gmail.com>"]
edition = "2018"
description = "learning rust bio"
license = "GPL v3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "0.32.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bin]]
name = "rust-bio-example"
path = "src/example.rs"