[package]
name = "learn-rust-book"
version = "0.1.0"
authors = ["alienzj <alienchuj@gmail.com>"]
edition = "2018"
description = "learning rust book"
license = "GPL v3"

[dependencies]
rand = "0.8.3"

[dev-dependencies]
criterion = "0.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bin]]
name = "rb-1-1"
path = "src/1.1.rs"

[[bin]]
name = "rb-1-2"
path = "src/1.2.rs"

[[bin]]
name = "rb-1-3"
path = "src/1.3.rs"

[[bin]]
name = "rb-2"
path = "src/2.rs"

[[bin]]
name = "rb-3-1"
path = "src/3.1.rs"

[[bin]]
name = "rb-3-2"
path = "src/3.2.rs"

[[bin]]
name = "rb-3-3"
path = "src/3.3.rs"

[[bin]]
name = "rb-3-4"
path = "src/3.4.rs"

[[bin]]
name = "rb-3-5"
path = "src/3.5.rs"

[[bin]]
name = "rb-4-1"
path = "src/4.1.rs"

[[bin]]
name = "rb-4-2"
path = "src/4.2.rs"

[[bin]]
name = "rb-4-3"
path = "src/4.3.rs"

[[bin]]
name = "rb-5-1"
path = "src/5.1.rs"

[[bin]]
name = "rb-5-2"
path = "src/5.2.rs"

[[bin]]
name = "rb-5-3"
path = "src/5.3.rs"

[[bin]]
name = "rb-6-1"
path = "src/6.1.rs"

[[bin]]
name = "rb-6-2"
path = "src/6.2.rs"

[[bin]]
name = "rb-6-3"
path = "src/6.3.rs"

[[bin]]
name = "rb-8-1"
path = "src/8.1.rs"

[[bin]]
name = "rb-8-2"
path = "src/8.2.rs"

[[bin]]
name = "rb-8-3"
path = "src/8.3.rs"

[[bin]]
name = "rb-9-1"
path = "src/9.1.rs"

[[bin]]
name = "rb-9-2"
path = "src/9.2.rs"

[[bin]]
name = "rb-9-3"
path = "src/9.3.rs"

[[bin]]
name = "rb-10-1"
path = "src/10.1.rs"

[[bin]]
name = "rb-10-2"
path = "src/10.2.rs"

[[bin]]
name = "rb-10-3"
path = "src/10.3.rs"

[[bin]]
name = "rb-13-1"
path = "src/13.1.rs"

[[bin]]
name = "rb-13-2"
path = "src/13.2.rs"